{
  "1804": {
    "version": "1804",
    "date": "23.04.2018",
    "changes": [
      "add more documentations",
      "update to grafana 5.0.4",
      "update icingaweb2",
      "set warning and critical values in some icinga2 checks",
      "bugfix for icinga2 memory check",
      "add max feeder elements for CAE Feeders",
      "add this web UI",
      "add Background Feeder graphs for Content Feeder",
      "remove 'used UAPI Cache' from Grafana Overview"
    ]
  },
  "1806": {
    "version": "1806",
    "date": "18.06.2018",
    "changes": [
      "update to grafana 5.1.3",
      "grafana folder support",
      "set grafana 5 as default",
      "split annotations into more types",
      "update to icinga2 2.8.4",
      "update to icingaweb2 2.5.3",
      "update to jolokia 1.5.0",
      "update to graphite 1.1.3",
      "jolokia supports now authentication",
      "update to grafana gem 0.10.1",
      "update to icinga2 gem 1.0.0",
      "add new documentations container",
      "including the stack documentation and a operation guide",
      "support node_exporter v0.16.x"
    ]
  },
  "1808": {
    "version": "1808",
    "date": "",
    "changes": []
  }
}